--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "node": ">= 0.10.x"
   },
   "scripts": {
-    "build": "rm ./dist/* && ./node_modules/.bin/6to5 -d ./dist ./lib",
+    "build": "6to5 -d ./dist ./lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {},
