--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "react": "^0.13.0-beta.1"
+    "react": "0.13.x"
   },
   "keywords": [
     "react",
